@@ -29,6 +29,7 @@ import com.gentics.mesh.core.data.relationship.GraphPermission;
 import com.gentics.mesh.core.data.root.RootVertex;
 import com.gentics.mesh.core.rest.common.RestModel;
 import com.gentics.mesh.core.rest.error.NotModifiedException;
+import com.gentics.mesh.etc.config.GraphStorageOptions;
 import com.gentics.mesh.etc.config.MeshOptions;
 import com.gentics.mesh.event.EventQueueBatch;
 import com.gentics.mesh.graphdb.spi.Database;
@@ -62,9 +63,11 @@ public class HandlerUtilities {
 
 	@Inject
 	public HandlerUtilities(Database database, MeshOptions meshOptions, MetricsService metrics, Provider<EventQueueBatch> queueProvider, Provider<BulkActionContext> bulkProvider) {
+		GraphStorageOptions storageOptions = meshOptions.getStorageOptions();
+		boolean isClustered = meshOptions.getClusterOptions() != null && meshOptions.getClusterOptions().isEnabled();
 		this.database = database;
 		this.metrics = metrics;
-		this.syncWrites = meshOptions.getStorageOptions() != null && meshOptions.getStorageOptions().isSynchronizeWrites();
+		this.syncWrites = isClustered || storageOptions.isSynchronizeWrites();
 		this.queueProvider = queueProvider;
 		this.bulkProvider = bulkProvider;
 	}
