@@ -23,6 +23,13 @@ include::content/docs/variables.adoc-include[]
 
 * The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].
 
+[[NEXT]]
+== NEXT
+
+icon:plus[] Graph: The default value for `tx.retry.delay` has been set to 0. The tx delay will thus be disabled by default.
+
+icon:plus[] Clustering: The `storage.synchronizeWrites` option will be enabled by default when clustering is active.
+
 [[v0.39.2]]
 == 0.39.2 (20.08.2019)
 
